monitoring/base/grafana/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: grafana
  labels:
    k8s-app: grafana
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.ingress.kubernetes.io/auth-remove-header: "true"
    traefik.ingress.kubernetes.io/custom-request-headers: "Authorization:"
    traefik.ingress.kubernetes.io/request-modifier: "ReplacePathRegex: ^/internal/grafana/(.*) /$1"
spec:
  rules:
